--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "relay-compiler-language-typescript",
+  "name": "@brightalley/relay-compiler-language-typescript",
   "version": "15.0.1",
   "description": "A language plugin for Relay that adds TypeScript support, including emitting type definitions.",
   "keywords": [
